traefik-ingress-controller/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: myingressroute
  namespace: trivago
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`version1.trivago.apps.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: version1
      port: 80
      namespace: trivago
      weight: 70
    - name: version2
      port: 80  
      namespace: trivago
      weight: 30
